# litestar-manage

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/litestar_manage/: __init__.py  __main__.py  cli.py  constants.py  renderer.py  venv_builder.py
src/litestar_manage/applet_templates/single_file/: app.py.jinja  copier.yml
src/litestar_manage/applet_templates/single_file/{% if init_templates %}templates{% endif %}/: index.html.jinja2.jinja
src/litestar_manage/template/: README.md.jinja2
src/litestar_manage/template/app/: app.py
src/litestar_manage/template/app/templates/: index.html.jinja2
src/litestar_manage/template/src/app/: app.py  config.py
src/litestar_manage/template/src/app/controllers/: web.py
src/litestar_manage/templates/: README.md.jinja2
src/litestar_manage/templates/app/src/: app_controller.py  app_service.py  main.py
src/litestar_manage/templates/app/src/templates/: index.html.jinja2
src/litestar_manage/templates/resource/: controller.py.jinja2  dto.py.jinja2  models.py.jinja2  repository.py.jinja2  service.py.jinja2
tests/: __init__.py  test_renderer.py  test_resource.py  test_venv_builder.py
